src/liquid/components/ld-sidenav/ld-sidenav-navitem/ld-sidenav-navitem.shadow.css
/* ... */
.ld-sidenav-navitem__slot-container-icon {
  flex-shrink: 0;
  background-color: var(
    --ld-sidenav-navitem-icon-bg-col,
    var(--ld-thm-primary)
  );
  color: var(--ld-sidenav-navitem-icon-col, var(--ld-thm-secondary-focus));
  border-radius: var(--ld-sidenav-navitem-border-radius);
  display: flex;
  justify-content: center;
  align-items: center;
  width: var(--ld-sidenav-navitem-icon-size);
  height: var(--ld-sidenav-navitem-icon-size);
  transition: transform var(--ld-sidenav-transition-duration-collapse-expand)
    ease;
  position: relative;
  z-index: 1;

  .ld-sidenav-navitem--secondary &,
  .ld-sidenav-navitem--tertiary & {
    display: none;
  }

  .ld-sidenav-navitem--collapsed & {
    transform: translateX(var(--ld-sidenav-translate-x-delta));
  }

  > ::slotted(*) {
    width: 100%;
    height: 100%;
    border-radius: calc(var(--ld-sidenav-navitem-border-radius));
    transform: scale(1.01); /* removes weird outline */
  }
}

.ld-sidenav-navitem__tooltip {
  position: absolute;
  inset: calc(-1 * var(--ld-sidenav-navitem-bg-inset));
  z-index: 1;
  pointer-events: all; /* overwrites pointer-events set on sidenav accordion */
}
.ld-sidenav-navitem__tooltip-trigger {
  position: relative;
  cursor: pointer;
  width: calc(
    var(--ld-sidenav-navitem-icon-size) + 2 * var(--ld-sidenav-navitem-bg-inset)
  );
  aspect-ratio: 1;
  border-radius: var(--ld-sidenav-navitem-border-radius);

  .ld-sidenav-navitem--rounded & {
    border-radius: var(--ld-br-full);
  }
}

.ld-sidenav-navitem__slot-container {
  margin-left: var(--ld-sp-12);
  margin-right: auto;
  max-height: var(--ld-sidenav-navitem-height); /* required in Safari */
  line-height: var(--ld-sidenav-line-height);
  transition:
    opacity var(--ld-sidenav-transition-duration-collapse-expand)
      var(--ld-sidenav-transition-delay-collapse-expand) linear,
    transform var(--ld-sidenav-transition-duration-collapse-expand) ease;
  padding-right: var(--ld-sp-4);

  .ld-sidenav-navitem--secondary-icon & {
    padding-right: var(--ld-sp-12);
  }

  .ld-sidenav-navitem--collapsed & {
    opacity: 0;
    transform: translateX(var(--ld-sidenav-translate-x-delta));
    transition:
      opacity var(--ld-sidenav-transition-duration-collapse-expand) linear,
      transform var(--ld-sidenav-transition-duration-collapse-expand) ease;
  }

  .ld-sidenav-navitem--secondary &,
  .ld-sidenav-navitem--tertiary & {
    padding-left: 0;
  }
}

.ld-sidenav-navitem__mainline,
.ld-sidenav-navitem__subline {
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 2;
  display: -webkit-box;
  text-overflow: ellipsis;
  overflow: hidden;
}

.ld-sidenav-navitem--subline .ld-sidenav-navitem__mainline,
.ld-sidenav-navitem__subline {
  -webkit-line-clamp: 1;
  word-break: break-all;
}

.ld-sidenav-navitem__subline {
  font: var(--ld-typo-body-s);
  line-height: var(--ld-sidenav-line-height);
  color: var(--ld-col-neutral-700);
}

.ld-sidenav-navitem__slot-icon-secondary-container {
  position: relative;
  display: flex;
  flex-shrink: 0;
  margin-right: var(--ld-sp-12);
  color: var(--ld-sidenav-navitem-secondary-icon-color);
  transition:
    opacity var(--ld-sidenav-transition-duration-collapse-expand)
      var(--ld-sidenav-transition-delay-collapse-expand) linear,
    transform var(--ld-sidenav-transition-duration-collapse-expand) ease;

  .ld-sidenav-navitem--collapsed & {
    opacity: 0;
    transform: translateX(var(--ld-sidenav-translate-x-delta));
    transition:
      opacity var(--ld-sidenav-transition-duration-collapse-expand) linear,
      transform var(--ld-sidenav-transition-duration-collapse-expand) ease;
  }

  .ld-sidenav-navitem--in-accordion & {
    margin-right: var(--ld-sp-4);
  }
}

.ld-sidenav-navitem__abbr {
  font: var(--ld-typo-cap-m);
  font-size: var(--ld-sidenav-navitem-icon-font-size);
  text-transform: uppercase;
}

.ld-sidenav-navitem__icon-to {
  transform: translateX(var(--ld-sp-6));
}

